[package]
name = "redis_hnsw"
version = "0.1.0"
authors = ["Zhao Lang <eltoshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
redis-module = "0.7.0"
lazy_static = "1.4.0"
rand = "0.7.3"
