[package]
name = "redis_hnsw"
version = "0.1.0"
authors = ["Zhao Lang <eltoshan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
redis-module = { version = "0.10.0", features = ["experimental-api"] }
redismodule_cmd = { git = "https://github.com/zhao-lang/redismodule-cmd", features = ["docgen"] }
lazy_static = "1.4.0"
rand = "0.7.3"
ordered-float = "1.0.2"
owning_ref = "0.4.1"
num = "0.2.1"

[dev-dependencies]
redis-module = { version = "0.10.0", features = ["test"] }
